# Horus

./: .gitignore  README.md
ELK-Docker/: docker-compose.yml
docs/: Protocol.md
hrs-common/: Cargo.toml
hrs-common/src/: alert.rs  config.rs  lib.rs  messages.rs  objfile.rs  program.rs  sig.rs
kcontroller/: Cargo.toml
kcontroller/src/: main.rs
kcontroller/src/server/: manager.rs  mod.rs  protocol.rs  server.rs  web_client.rs
kcontroller/user/: signatures.toml
kwall/: Cargo.toml
kwall/config/: signatures.toml
kwall/src/: main.rs
kwall/src/agent/: client.rs  ebpf.rs  globals.rs  manager.rs  mod.rs  sig.rs  test.c  tracer.rs
kwall/src/agent/resources/bpf-templates/kprobe/: single.basic.c
kwall/src/agent/resources/bpf/action/: kill.c
kwall/src/agent/resources/bpf/action/kprobe/: block.c
kwall/src/agent/resources/bpf/action/tracepoint/: block.c
kwall/src/agent/resources/bpf/block/kprobe/: Syscall.c  tracepoint_action_slave.c
kwall/src/agent/resources/bpf/block/tracepoint/: FileAccess.c
kwall/src/agent/resources/bpf/detect/: comm.c  file.c
kwall/src/agent/resources/bpf/kprobe/: FileAccess.c  Syscall.c
kwall/src/agent/resources/bpf/perf/: alert.single.c
kwall/src/agent/resources/bpf/perf/kprobe/: alert.default.c  alert.single.c
kwall/src/agent/resources/bpf/perf/tracepoint/: alert.default.c  alert.single.c
kwall/src/agent/resources/bpf/statement/: if.c
kwall/src/agent/resources/bpf/whitelist/: comm.c
kwall/user/: signatures.toml
root/: Cargo.toml  agent_config.toml  devices.toml  test.toml
root/src/: agent_config_helper.rs  bpfCode.c  devices.toml  load_users.rs  main.rs  toml_config.rs  tracer.rs
