[package]
name = "kcontroller"
version = "0.1.0"
edition = "2021"
authors = ["Noam Daniel Eliyahu", "Liam Sapir"]
keywords = ["bcc", "kernel", "eBPF", "linux"]
rust-version = "1.68"

publish = false

[registries.crates-io]
protocol = "sparse" # will become the default from rust v1.70

[dependencies]
hrs-common = { version = "0.1.0", path = "../hrs-common" } # the *local* common crate for both agent and server
tokio = { version = "1.14", features = ["full"] }
tokio-tungstenite = "0.15"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "4.2.2"
toml = "0.7.3"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[features]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
codegen-units = 1 # build using only one code generation unit (fastest code..?)
panic = 'unwind'
lto = true
strip = true

[profile.release-no-strip]
inherits = "release"
strip = false

[[bin]]
name = "kcontroller"
path = "src/main.rs"
