[package]
name = "horus_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcc-sys = "0.23.0"
byteorder = "1.4.3"
libc = "0.2.108"
thiserror = "1.0.30"
bitflags = "1.3.2"
socket2 = "0.4.4"
bcc = "0.0.33"
toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"
